# Talk2Database

./: .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_ask_v2.py  0002_clarity_and_settings.py  0002_saved_queries.py  0003_glossary.py  0004_ask_v2.py
backend/app/: __init__.py  cli.py  config.py  deps.py  main.py
backend/app/connectors/: __init__.py  base.py  factory.py  mysql.py  postgres.py
backend/app/db/: base.py  panel.py  userdata.py
backend/app/importers/: __init__.py  manual.py
backend/app/models/: __init__.py  app_setting.py  clarity.py  connection.py  glossary.py  import_run.py  invite.py  query_history.py  saved_query.py  schema_snapshot.py  user.py
backend/app/routers/: admin_audit.py  analysis.py  ask.py  auth.py  clarity.py  connections.py  execute.py  glossary.py  history.py  imports.py  prompts.py  results.py  saved_queries.py  summarize.py  system.py  users.py
backend/app/schemas/: analysis.py  ask.py  audit.py  auth.py  clarity.py  connections.py  execute.py  glossary.py  history.py  imports.py  prompts.py  results.py  saved_query.py  schema.py  summarize.py  system.py  user.py
backend/app/services/: app_settings.py  auth_service.py  connections.py  crypto.py  csv_export.py  explain.py  pg_version.py  (+8 more)
backend/scripts/: bootstrap_readonly_role.sh  entrypoint.dev.sh  entrypoint.sh
backend/tests/: test_admin_audit.py  test_ai_providers.py  test_analysis_agent.py  test_ask_router.py  test_auth_service.py  test_clarity_client.py  test_connectors.py  test_crypto.py  test_explain.py  test_generate_loop.py  test_glossary.py  test_import_detect.py  test_manual_import.py  test_pg_version.py  test_prompt_store.py  test_results_summary.py  test_saved_queries.py  test_schema.py  test_schema_endpoint.py  test_sql_guard.py  test_sql_roles.py  test_sql_verify.py  test_userdata_connection.py
(+81 files in other folders)
