[project]
name = "talk2database"
version = "0.1.0"
description = "Self-hosted panel that turns natural-language questions into read-only SQL over your own databases (PostgreSQL, MySQL, MariaDB, ...)."
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn[standard]>=0.30,<0.35",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "asyncpg>=0.29,<0.31",
    "alembic>=1.13,<1.15",
    "psycopg[binary]>=3.2,<3.3",
    "pymysql>=1.1,<1.2",
    "cryptography>=42.0,<45",
    "pydantic[email]>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlglot>=25.0,<26",
    "pyjwt>=2.8,<3",
    "pwdlib[argon2]>=0.2.0,<0.3",
    "python-multipart>=0.0.9,<0.1",
    "anthropic>=0.40,<1",
    "openai>=1.50,<2",
    "httpx>=0.27,<0.29",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.25",
    "ruff>=0.6,<0.13",
    "mypy>=1.10,<2",
    "types-PyMySQL>=1.1,<2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

# --------------------------------------------------------------------------- #
# Tooling
# --------------------------------------------------------------------------- #
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "TID", "RUF"]
ignore = [
    "B008",   # FastAPI uses function calls in argument defaults (Depends/File)
    "UP038",  # isinstance(x, (A, B)) is faster at runtime than isinstance(x, A | B)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]
